spring integration test example

--- a/spring-datajpa-postgresql/src/main/resources/application.properties
+++ b/spring-datajpa-postgresql/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 server.port=8081
 spring.jpa.hibernate.ddl-auto=update
 
+spring.jpa.database=postgresql
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/javadb
 spring.datasource.username=postgres
 spring.datasource.password=benimSifrem
