--- a/spring-datajpa-postgresql/pom.xml
+++ b/spring-datajpa-postgresql/pom.xml
@@ -52,6 +52,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.200</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
