spring boot rabbitmq örnek

--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,6 @@
         <module>spring-elasticsearch</module>
         <module>spring-datajpa-postgresql</module>
         <module>spring-boot-api-doc</module>
+        <module>spring-boot-rabbitmq</module>
     </modules>
 </project>
