spring-boot-dockerization

--- a/pom.xml
+++ b/pom.xml
@@ -15,5 +15,6 @@
         <module>spring-datajpa-postgresql</module>
         <module>spring-boot-api-doc</module>
         <module>spring-boot-rabbitmq</module>
+        <module>spring-boot-dockerization</module>
     </modules>
 </project>
