--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,6 @@
         <module>spring-boot-jwt</module>
         <module>spring-boot-aop</module>
         <module>spring-security-facebook-login</module>
+        <module>spring-boot-graphql</module>
     </modules>
 </project>
