spring-boot-redis-cache

--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,6 @@
         <module>spring-security-facebook-login</module>
         <module>spring-boot-graphql</module>
         <module>spring-boot-rest-template</module>
+        <module>spring-redis-cache</module>
     </modules>
 </project>
