spring-boot-kafka

--- a/pom.xml
+++ b/pom.xml
@@ -23,5 +23,6 @@
         <module>spring-boot-rest-template</module>
         <module>spring-redis-cache</module>
         <module>spring-boot-websocket</module>
+        <module>spring-boot-kafka</module>
     </modules>
 </project>
