--- a/pom.xml
+++ b/pom.xml
@@ -24,5 +24,6 @@
         <module>spring-redis-cache</module>
         <module>spring-boot-websocket</module>
         <module>spring-boot-pagination</module>
+        <module>spring-boot-events</module>
     </modules>
 </project>
