--- a/pom.xml
+++ b/pom.xml
@@ -27,5 +27,6 @@
         <module>spring-boot-pagination</module>
         <module>spring-boot-events</module>
         <module>spring-boot-gridfs-fileupload</module>
+        <module>spring-boot-flyway</module>
     </modules>
 </project>
