--- a/pom.xml
+++ b/pom.xml
@@ -28,5 +28,6 @@
         <module>spring-boot-events</module>
         <module>spring-boot-gridfs-fileupload</module>
         <module>spring-boot-flyway</module>
+        <module>spring-boot-versioning</module>
     </modules>
 </project>
