spring-boot-hibernate-hazelcast

--- a/pom.xml
+++ b/pom.xml
@@ -30,5 +30,6 @@
         <module>spring-boot-flyway</module>
         <module>spring-boot-versioning</module>
         <module>spring-boot-exception-handling</module>
+        <module>spring-boot-hazelcast-cache</module>
     </modules>
 </project>
